# niri-tools

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml  dprint.json  flake.nix  rust-toolchain.toml  target
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml
crates/niri-tools/: Cargo.toml
crates/niri-tools-common/: Cargo.toml
crates/niri-tools-common/src/: config.rs  config_parser.rs  error.rs  lib.rs  niri_config.rs  paths.rs  protocol.rs  traits.rs  types.rs
crates/niri-tools-common/src/config/: mod.rs  mode.rs  scratchpad.rs  settings.rs  ui.rs
crates/niri-tools-daemon/: Cargo.toml
crates/niri-tools-daemon/src/: events.rs  main.rs  mode.rs  niri.rs  notify.rs  scratchpad.rs  server.rs  state.rs
crates/niri-tools-daemon/src/ui/: css.rs  mod.rs  mode_overlay.rs  scratchpad_picker.rs
crates/niri-tools/src/: main.rs
docs/plans/: 2026-03-12-rust-rewrite.md  2026-03-15-smart-focus.md  modes-and-scratchpad-picker.md  which-key.md
docs/session-handoffs/: 2026-03-12-08-15-initial-scaffolding.md  2026-03-12-16-00-rust-rewrite-phase8.md  2026-03-12-23-50-config-file-watcher.md  2026-03-25-modes-and-scratchpad-picker.md
docs/specs/: 2026-03-25-modes-and-scratchpad-picker-design.md
