[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
strip = true
