[package]
name = "niri-tools-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
futures-core = "0.3"
kdl = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
