[package]
name = "niri-tools-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
futures-core.workspace = true
kdl = "6"
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

[dev-dependencies]
tempfile.workspace = true
