[package]
name = "niri-tools-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
niri-tools-common = { path = "../niri-tools-common" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "fs", "signal", "io-util", "time"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

[dev-dependencies]
tempfile = "3"
