[package]
name = "niri-tools-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
fuzzy-matcher = "0.3"
futures-core.workspace = true
futures-util = "0.3"
gdk4-wayland = { version = "0.9", package = "gdk4-wayland" }
gtk4 = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = { version = "0.5", package = "gtk4-layer-shell" }
niri-tools-common = { path = "../niri-tools-common" }
notify = "6"
regex = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "fs", "signal", "io-util", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true
